--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.16",
     "framer-motion": "^10.0.1",
+    "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
@@ -21,6 +22,8 @@
     "react-player": "^2.12.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
+    "@types/google-map-react": "^2.1.7",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.27",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
