--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.16",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.0.1",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
