--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@heroicons/react": "^2.0.16",
     "dotenv": "^16.0.3",
     "framer-motion": "^10.0.1",
-    "google-map-react": "^2.2.0",
+    "google-maps-react-markers": "^1.2.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
